--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+  <!-- <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <div class="navbar-item is-hidden-desktop">
         <a href="https://fullstackmark.com" class="icon is-large has-text-light">
@@ -29,7 +29,7 @@
         </div>
       </div>
     </div>
-  </nav>
+  </nav> -->
 
   <section class="hero is-primary">
     <div class="hero-body">
